# BookTracking

./: .dockerignore  .env-template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  auth.py  books.py  config.py  db.py  docker-compose.yml  fly.toml  hello.py  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
migrations/: env.py
migrations/versions/: 03d5257e0a02_updated_models_for_use_with_google_.py  1e7cc132e250_.py  2868dc61d965_adjusting_book_model.py  2948740d7253_fix_duplicate_user_table_issue.py  2ab73586da75_initial_migration.py  2b4e661446c2_fixt_userbookstatus_table.py  2e3f7780d24b_update_user_book_status_models.py  370cbc8181c4_add_cover_image_url_to_booksearchresult.py  56b69f39cacf_add_book_index.py  5939f2d681c7_initial_migration.py  6126fe788844_adjusting_models_for_cover_image.py  676463792f33_updated_google_models.py  7405f071f2c3_more_authentication_added.py  82798c201be1_google_books_id_additions.py  947a5b24e347_add_cover_image_url_to_book_model.py  9b86ff86f38c_updated_google_save_model.py  bcc627763cfc_add_rate_limit_table.py  d2e87060bd4d_add_cover_image_to_book_table.py  d7afb931689e_google_books_id_removed_old_versions.py  de6ca62108f4_add_authentication_to_user_model.py  ec41c43a570c_slight_changes_added_statusenum_and_.py  ef2f7e612ca5_added_google_books_models.py
pages/: ai_recommendations.py  login.py  saved_books.py  signup.py
services/: google_books.py  marvin_ai.py
styles/: global.css
tests/: conftest.py  test_main.py
