[project]
name = "booktracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "uvicorn>=0.34.0",
    "sqlalchemy==2.0.37",
    "sqlmodel==0.0.22",
    "passlib>=1.7.4",
    "alembic==1.14.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "beautifulsoup4==4.12.3",
    "bs4==0.0.2",
    "certifi==2024.12.14",
    "click==8.1.8",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "Mako==1.3.8",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.5",
    "pydantic_core==2.27.2",
    "Pygments==2.19.1",
    "python-decouple==3.8",
    "rich==13.9.4",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "starlette==0.41.3",
    "typer==0.15.1",
    "typing_extensions==4.12.2",
    "pydantic[email]>=2.10.5",
    "bcrypt>=4.2.1",
    "python-dotenv>=1.0.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.3",
    "psycopg2>=2.9.10",
    "streamlit>=1.41.1",
    "pyjwt>=2.10.1",
    "pydantic-settings>=2.7.1",
    "marvin>=2.3.8",
]

[tool.uv]
dev-dependencies = [
    "pytest",
 "pytest-asyncio",
 "pytest-cov>=6.0.0",
]
